Zooming feature refactoring
Refactoring zoom WIP. Simplifying ZoomAtPosition method + Renaming Scale property to ViewportZoom as it will refelect and update the current scaling(zooming) of the viewport + correctly coercing

Move all zooming related logic to separated partial class.

Work in progress on implementing zooming to a point.

--- a/RichCanvasTestApp/MainWindow.xaml
+++ b/RichCanvasTestApp/MainWindow.xaml
@@ -348,7 +348,7 @@
                                      DisableCache="{Binding DisableCache}"
                                      DisableZoom="{Binding DisableZoom}"
                                      MousePosition="{Binding MousePosition, Mode=OneWayToSource}"
-                                     Scale="{Binding Scale, Converter={StaticResource StringToFloatConverter}, Mode=TwoWay}"
+                                     ViewportZoom="{Binding Scale, Converter={StaticResource StringToFloatConverter}, Mode=TwoWay}"
                                      ScrollFactor="{Binding ScrollFactor, Converter={StaticResource StringToFloatConverter},ConverterParameter=double}"
                                      ScaleFactor="{Binding ZoomFactor, Converter={StaticResource StringToFloatConverter},ConverterParameter=double}"
                                      MinScale="{Binding MinScale, Converter={StaticResource StringToFloatConverter},ConverterParameter=double}"
