Add Zooming UI Automation Tests
Add zooming UI automation tests + related logic and automation apis + changes to the UI automation test project

ZoomingTests - add tests to verify if zooming in and out to multiple locations keeps the mouse in position.

Add Zooming properties on UITests.App project. Change look and feel on state views by adding expanders.

Add Zooming UI Automation Tests for verifying that zooming changes based on scale factor, is correctly limited by MaxScale and MinScale.

Added Zooming UI Automation test to verify updates through binded ViewportZoom DP. Add UI Test App textbox to be able set the value from UI Automation Test project.

Added Zooming UI Automation tests to verify zooming correctly updates scrolling.

--- a/RichCanvasUITests.App/MainWindow.xaml
+++ b/RichCanvasUITests.App/MainWindow.xaml
@@ -39,17 +39,17 @@
         <StackPanel Grid.Column="1"
                     Width="150">
 
-            <TextBlock Text="Drawing State Tests" />
             <statePresenters:DrawingStateView DataContext="{Binding DrawingState}" />
-            <Separator />
+            <Separator HorizontalAlignment="Stretch" />
 
-            <TextBlock Text="Multiple Selection State Tests" />
             <statePresenters:MultipleSelectionStateView DataContext="{Binding MultipleSelectionState}" />
-            <Separator />
+            <Separator HorizontalAlignment="Stretch" />
 
-            <TextBlock Text="Single Selection State Tests" />
             <statePresenters:SingleSelectionStateView DataContext="{Binding SingleSelectionState}" />
-            <Separator />
+            <Separator HorizontalAlignment="Stretch" />
+
+            <statePresenters:ZoomingStateView DataContext="{Binding ZoomingViewModel}" />
+            <Separator HorizontalAlignment="Stretch" />
 
             <Button Command="{Binding UpdateItemsSourceCommand}"
                     CommandParameter="{x:Static scs:NotifyCollectionChangedAction.Move}"
@@ -122,6 +122,9 @@
                     <Button AutomationProperties.AutomationId="{x:Static auto:AutomationIds.SetViewportLocationValueButtonId}"
                             Content="Set Viewport Location Value"
                             Command="{Binding SetViewportLocationValue}" />
+                    <Button AutomationProperties.AutomationId="{x:Static auto:AutomationIds.ResetViewportZoomButtonId}"
+                            Content="Reset Viewport Zoom"
+                            Command="{Binding ResetViewportZoomCommand}" />
                 </StackPanel>
             </Border>
         </StackPanel>
@@ -139,7 +142,11 @@
                                          DrawingEndedCommand="{Binding DrawingState.DrawingEndedCommand}"
                                          ViewportLocation="{Binding ViewportLocation, Mode=TwoWay}"
                                          ViewportSize="{Binding ViewportSize, Mode=OneWayToSource}"
+                                         ViewportZoom="{Binding ZoomingViewModel.ViewportZoom, Mode=TwoWay}"
                                          ScrollFactor="100"
+                                         MinScale="{Binding ZoomingViewModel.MinScale, Mode=TwoWay}"
+                                         MaxScale="{Binding ZoomingViewModel.MaxScale, Mode=TwoWay}"
+                                         ScaleFactor="{Binding ZoomingViewModel.ScaleFactor, Mode=TwoWay}"
                                          Name="source">
                 <richCanvas:RichItemsControl.Resources>
                     <DataTemplate DataType="{x:Type local:RichItemContainerModel}">
