--- a/RichCanvasUITests.App/StatePresenters/MultipleSelectionStateView.xaml
+++ b/RichCanvasUITests.App/StatePresenters/MultipleSelectionStateView.xaml
@@ -3,7 +3,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:RichCanvasUITests.App.StatePresenters"
              xmlns:vm="clr-namespace:RichCanvasUITests.App.States"
              xmlns:auto="clr-namespace:RichCanvasUITests.App.Automation"
              xmlns:s="clr-namespace:System;assembly=mscorlib"
@@ -20,37 +19,43 @@
         <s:Int64 x:Key="Select2Items">2</s:Int64>
         <s:Int64 x:Key="Select3Items">3</s:Int64>
         <s:Int64 x:Key="Select5Items">5</s:Int64>
-
     </UserControl.Resources>
 
-    <StackPanel>
-        <Button Command="{Binding AddSelectableItemsCommmand}"
-                CommandParameter="{StaticResource 1}"
-                AutomationProperties.AutomationId="{x:Static auto:AutomationIds.AddSelectableItemsButtonId1}"
-                Content="Add Selectable Items 1" />
-        <Button Command="{Binding AddSelectableItemsCommmand}"
-                CommandParameter="{StaticResource 2}"
-                AutomationProperties.AutomationId="{x:Static auto:AutomationIds.AddSelectableItemsButtonId2}"
-                Content="Add Selectable Items 2" />
+    <Expander IsExpanded="True">
+        <Expander.Header>
+            <TextBlock Text="Multiple Selection State Tests" />
+        </Expander.Header>
+        <Expander.Content>
+            <StackPanel>
+                <Button Command="{Binding AddSelectableItemsCommmand}"
+                        CommandParameter="{StaticResource 1}"
+                        AutomationProperties.AutomationId="{x:Static auto:AutomationIds.AddSelectableItemsButtonId1}"
+                        Content="Add Selectable Items 1" />
+                <Button Command="{Binding AddSelectableItemsCommmand}"
+                        CommandParameter="{StaticResource 2}"
+                        AutomationProperties.AutomationId="{x:Static auto:AutomationIds.AddSelectableItemsButtonId2}"
+                        Content="Add Selectable Items 2" />
 
-        <Button Command="{Binding AddSelectedItemsCommand}"
-                CommandParameter="{StaticResource Select1Item}"
-                AutomationProperties.AutomationId="{x:Static auto:AutomationIds.SelectFirst1ItemsNotSelectedButtonId}"
-                Content="Add 1 Selected Item" />
-        <Button Command="{Binding AddSelectedItemsCommand}"
-                CommandParameter="{StaticResource Select2Items}"
-                AutomationProperties.AutomationId="{x:Static auto:AutomationIds.SelectFirst2ItemsNotSelectedButtonId}"
-                Content="Add 2 Selected Item" />
-        <Button Command="{Binding AddSelectedItemsCommand}"
-                CommandParameter="{StaticResource Select3Items}"
-                AutomationProperties.AutomationId="{x:Static auto:AutomationIds.SelectFirst3ItemsNotSelectedButtonId}"
-                Content="Add 3 Selected Item" />
-        <Button Command="{Binding AddSelectedItemsCommand}"
-                CommandParameter="{StaticResource Select5Items}"
-                AutomationProperties.AutomationId="{x:Static auto:AutomationIds.SelectFirst5ItemsNotSelectedButtonId}"
-                Content="Add 5 Selected Item" />
-        <Button Command="{Binding SelectAllItemsCommand}"
-                AutomationProperties.AutomationId="{x:Static auto:AutomationIds.SelectAllItemsButtonId}"
-                Content="Select All Items" />
-    </StackPanel>
+                <Button Command="{Binding AddSelectedItemsCommand}"
+                        CommandParameter="{StaticResource Select1Item}"
+                        AutomationProperties.AutomationId="{x:Static auto:AutomationIds.SelectFirst1ItemsNotSelectedButtonId}"
+                        Content="Add 1 Selected Item" />
+                <Button Command="{Binding AddSelectedItemsCommand}"
+                        CommandParameter="{StaticResource Select2Items}"
+                        AutomationProperties.AutomationId="{x:Static auto:AutomationIds.SelectFirst2ItemsNotSelectedButtonId}"
+                        Content="Add 2 Selected Item" />
+                <Button Command="{Binding AddSelectedItemsCommand}"
+                        CommandParameter="{StaticResource Select3Items}"
+                        AutomationProperties.AutomationId="{x:Static auto:AutomationIds.SelectFirst3ItemsNotSelectedButtonId}"
+                        Content="Add 3 Selected Item" />
+                <Button Command="{Binding AddSelectedItemsCommand}"
+                        CommandParameter="{StaticResource Select5Items}"
+                        AutomationProperties.AutomationId="{x:Static auto:AutomationIds.SelectFirst5ItemsNotSelectedButtonId}"
+                        Content="Add 5 Selected Item" />
+                <Button Command="{Binding SelectAllItemsCommand}"
+                        AutomationProperties.AutomationId="{x:Static auto:AutomationIds.SelectAllItemsButtonId}"
+                        Content="Select All Items" />
+            </StackPanel>
+        </Expander.Content>
+    </Expander>
 </UserControl>
