Grid background used for snapping is now user's responsibility. Add a GeometryDrawing background in the UI Tests App project. Match the Viewport with the GridSpacing property used for snapping. Expose UIntToRectConverter from RichCanvas. Change default GridSpacing value to 20.

--- a/RichCanvas/Themes/Generic.xaml
+++ b/RichCanvas/Themes/Generic.xaml
@@ -4,5 +4,6 @@
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/RichCanvas;component/Styles/RichItemsControlStyle.xaml"></ResourceDictionary>
         <ResourceDictionary Source="pack://application:,,,/RichCanvas;component/Styles/RichItemContainerStyle.xaml"></ResourceDictionary>
+        <ResourceDictionary Source="pack://application:,,,/RichCanvas;component/Styles/Converters.xaml"></ResourceDictionary>
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
