--- a/Automation Tests/RichCanvasUITests.App/MainWindow.xaml
+++ b/Automation Tests/RichCanvasUITests.App/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:scs="clr-namespace:System.Collections.Specialized;assembly=System"
         xmlns:auto="clr-namespace:RichCanvasUITests.App.Automation"
         xmlns:models="clr-namespace:RichCanvasUITests.App.Models"
-        xmlns:richCanvas="clr-namespace:RichCanvas;assembly=RichCanvas"
+        xmlns:rc="clr-namespace:RichCanvas;assembly=RichCanvas"
         xmlns:richCanvasConverters="clr-namespace:RichCanvas.Converters;assembly=RichCanvas"
         xmlns:statePresenters="clr-namespace:RichCanvasUITests.App.StatePresenters"
         mc:Ignorable="d"
@@ -146,36 +146,36 @@
         <ScrollViewer CanContentScroll="True"
                       VerticalScrollBarVisibility="Auto"
                       HorizontalScrollBarVisibility="Auto">
-            <richCanvas:RichItemsControl ItemsSource="{Binding Items}"
-                                         SelectedItem="{Binding SelectedItem, Mode=TwoWay}"
-                                         SelectedItems="{Binding SelectedItems}"
-                                         RealTimeSelectionEnabled="{Binding RealTimeSelectionEnabled}"
-                                         CanSelectMultipleItems="{Binding CanSelectMultipleItems}"
-                                         RealTimeDraggingEnabled="{Binding RealTimeDraggingEnabled}"
-                                         DrawingEndedCommand="{Binding DrawingState.DrawingEndedCommand}"
-                                         ViewportLocation="{Binding ViewportLocation, Mode=TwoWay}"
-                                         ViewportSize="{Binding ViewportSize, Mode=OneWayToSource}"
-                                         ViewportZoom="{Binding ZoomingViewModel.ViewportZoom, Mode=TwoWay}"
-                                         ScrollFactor="100"
-                                         MinScale="{Binding ZoomingViewModel.MinScale, Mode=TwoWay}"
-                                         MaxScale="{Binding ZoomingViewModel.MaxScale, Mode=TwoWay}"
-                                         ScaleFactor="{Binding ZoomingViewModel.ScaleFactor, Mode=TwoWay}"
-                                         EnableSnapping="{Binding EnableSnapping, Mode=TwoWay}"
-                                         GridSpacing="{Binding GridSpacing, Mode=TwoWay}"
-                                         Name="source">
-                <richCanvas:RichItemsControl.Background>
+            <rc:RichCanvas ItemsSource="{Binding Items}"
+                           SelectedItem="{Binding SelectedItem, Mode=TwoWay}"
+                           SelectedItems="{Binding SelectedItems}"
+                           RealTimeSelectionEnabled="{Binding RealTimeSelectionEnabled}"
+                           CanSelectMultipleItems="{Binding CanSelectMultipleItems}"
+                           RealTimeDraggingEnabled="{Binding RealTimeDraggingEnabled}"
+                           DrawingEndedCommand="{Binding DrawingState.DrawingEndedCommand}"
+                           ViewportLocation="{Binding ViewportLocation, Mode=TwoWay}"
+                           ViewportSize="{Binding ViewportSize, Mode=OneWayToSource}"
+                           ViewportZoom="{Binding ZoomingViewModel.ViewportZoom, Mode=TwoWay}"
+                           ScrollFactor="100"
+                           MinScale="{Binding ZoomingViewModel.MinScale, Mode=TwoWay}"
+                           MaxScale="{Binding ZoomingViewModel.MaxScale, Mode=TwoWay}"
+                           ScaleFactor="{Binding ZoomingViewModel.ScaleFactor, Mode=TwoWay}"
+                           EnableSnapping="{Binding EnableSnapping, Mode=TwoWay}"
+                           GridSpacing="{Binding GridSpacing, Mode=TwoWay}"
+                           Name="source">
+                <rc:RichCanvas.Background>
                     <DrawingBrush TileMode="Tile"
                                   ViewportUnits="Absolute"
                                   Viewport="{Binding GridSpacing, ElementName=source, Converter={StaticResource UIntToRectConverter}}"
                                   Transform="{Binding AppliedTransform, ElementName=source}"
                                   Drawing="{StaticResource RectangleGridGeometry}" />
-                </richCanvas:RichItemsControl.Background>
-                <richCanvas:RichItemsControl.Resources>
+                </rc:RichCanvas.Background>
+                <rc:RichCanvas.Resources>
                     <DataTemplate DataType="{x:Type local:RichItemContainerModel}">
                         <Rectangle Fill="Red">
                             <Rectangle.Style>
                                 <Style>
-                                    <Setter Property="richCanvas:RichItemContainer.ApplyTransform">
+                                    <Setter Property="rc:RichCanvasContainer.ApplyTransform">
                                         <Setter.Value>
                                             <TransformGroup>
                                                 <RotateTransform Angle="{Binding Angle}" />
@@ -199,10 +199,9 @@
                         <TextBlock Text="DRAWING ENDED"
                                    AutomationProperties.AutomationId="{x:Static auto:AutomationIds.DrawingEndedTextBoxId}" />
                     </DataTemplate>
-                </richCanvas:RichItemsControl.Resources>
-
-                <richCanvas:RichItemsControl.ItemContainerStyle>
-                    <Style TargetType="richCanvas:RichItemContainer">
+                </rc:RichCanvas.Resources>
+                <rc:RichCanvas.ItemContainerStyle>
+                    <Style TargetType="rc:RichCanvasContainer">
 
                         <Setter Property="Top"
                                 Value="{Binding Top, Mode=TwoWay}" />
@@ -226,10 +225,9 @@
                                         Value="0.6" />
                             </Trigger>
                         </Style.Triggers>
-
                     </Style>
-                </richCanvas:RichItemsControl.ItemContainerStyle>
-            </richCanvas:RichItemsControl>
+                </rc:RichCanvas.ItemContainerStyle>
+            </rc:RichCanvas>
         </ScrollViewer>
 
         <StatusBar Grid.Row="1">
