--- a/RichCanvas/Styles/RichItemContainerStyle.xaml
+++ b/RichCanvas/Styles/RichItemContainerStyle.xaml
@@ -1,10 +1,10 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:RichCanvas">
-    <Style TargetType="{x:Type local:RichItemContainer}">
+    <Style TargetType="{x:Type local:RichCanvasContainer}">
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type local:RichItemContainer}">
+                <ControlTemplate TargetType="{x:Type local:RichCanvasContainer}">
                     <ContentPresenter x:Name="PART_ContentPresenter"></ContentPresenter>
                 </ControlTemplate>
             </Setter.Value>
