Issue #12 showcase usage of an image that updates to viewport size while panning.

--- a/Automation Tests/RichCanvasUITests.App/MainWindow.xaml
+++ b/Automation Tests/RichCanvasUITests.App/MainWindow.xaml
@@ -85,6 +85,8 @@
                     BorderBrush="BlueViolet"
                     Margin="2">
                 <StackPanel>
+                    <Button Command="{Binding AddImageCommand}"
+                            Content="Add image" />
                     <ToggleButton AutomationProperties.AutomationId="{x:Static auto:AutomationIds.RealTimeSelectionToggleButtonId}"
                                   IsChecked="{Binding RealTimeSelectionEnabled, Mode=TwoWay}"
                                   Content="RealTimeSelection">
@@ -162,6 +164,7 @@
                            ScaleFactor="{Binding ZoomingViewModel.ScaleFactor, Mode=TwoWay}"
                            EnableSnapping="{Binding EnableSnapping, Mode=TwoWay}"
                            GridSpacing="{Binding GridSpacing, Mode=TwoWay}"
+                           MouseMove="source_MouseMove"
                            Name="source">
                 <rc:RichCanvas.Background>
                     <DrawingBrush TileMode="Tile"
@@ -198,6 +201,11 @@
                     <DataTemplate DataType="{x:Type models:DrawingEndedRepresentation}">
                         <TextBlock Text="DRAWING ENDED"
                                    AutomationProperties.AutomationId="{x:Static auto:AutomationIds.DrawingEndedTextBoxId}" />
+                    </DataTemplate>
+                    <DataTemplate DataType="{x:Type models:ImageModel}">
+                        <!--TODO: replace Source value with an actual path to an image-->
+                        <Image Source="path to an image"
+                               Stretch="Fill" />
                     </DataTemplate>
                 </rc:RichCanvas.Resources>
                 <rc:RichCanvas.ItemContainerStyle>
